--- a/activi-cloud/pom.xml
+++ b/activi-cloud/pom.xml
@@ -20,6 +20,7 @@
     <module>activiti-cloud-modeling-service</module>
     <module>activiti-cloud-notifications-graphql-service</module>
     <module>activiti-cloud-acceptance-tests</module>
+    <module>activiti-cloud-connectors</module>
   </modules>
 
 </project>
