--- a/activiti-cloud-apps/conf-files/Jenkinsfile
+++ b/activiti-cloud-apps/conf-files/Jenkinsfile
@@ -22,14 +22,14 @@ pipeline {
     CHARTMUSEUM_CREDS = credentials('jenkins-x-chartmuseum')
     GITHUB_CHARTS_REPO = "https://github.com/Activiti/activiti-cloud-helm-charts.git"
     GITHUB_HELM_REPO_URL = "https://activiti.github.io/activiti-cloud-helm-charts/"
+    GITHUB_CHARTS_BRANCH = "gh-pages"
     PREVIEW_NAMESPACE = "example-$BRANCH_NAME-$BUILD_NUMBER".toLowerCase().replaceAll("[\\-\\+\\.\\^:,]", "");
     GLOBAL_GATEWAY_DOMAIN = "35.242.205.159.nip.io"
     GATEWAY_HOST = "gateway.$PREVIEW_NAMESPACE.$GLOBAL_GATEWAY_DOMAIN"
     SSO_HOST = "identity.$PREVIEW_NAMESPACE.$GLOBAL_GATEWAY_DOMAIN"
     RELEASE_BRANCH = "develop"
     RELEASE_TAG_REGEX = "*M*"
-    ACTIVITI_CLOUD_FULL_CHART_VERSIONS= "$VERSION"
-
+    ACTIVITI_CLOUD_FULL_CHART_VERSIONS = "$VERSION"
   }
   stages {
     stage('CI Build and push snapshot') {
@@ -77,25 +77,34 @@ pipeline {
 
             sh "echo $VERSION > VERSION"
 
+            def charts = ["activiti-cloud-query/charts/activiti-cloud-query",
+                          "example-runtime-bundle/charts/runtime-bundle",
+                          "example-cloud-connector/charts/activiti-cloud-connector"]
+
+            for (chart in charts) {
+              sh "echo working on::: $chart"
+              dir("$chart") {
+                retry(5) {
+                  def name = chart.substring(chart.lastIndexOf('/') + 1)
+
+                  sh """ sed -i -e "s/version:.*/version: $VERSION/" Chart.yaml"""
+                  sh """ sed -i -e "s|repository: .*|repository: $DOCKER_REGISTRY/$ORG/$chart|" values.yaml"""
+                  sh """sed -i -e "s/tag: .*/tag: $VERSION/" values.yaml"""
+                }
+              }
+            }
+
             sh "git add --all"
             sh """git commit -m "release $VERSION" --allow-empty """
             sh """ git tag -fa v$VERSION -m "Release version $VERSION" """
             sh "git push origin v$VERSION "
 
-            def modules = ["example-runtime-bundle",
-                           "activiti-cloud-audit",
-                           "activiti-cloud-query",
-                           "activiti-cloud-notifications-graphql",
+            def modules = ["activiti-cloud-query",
+                           "example-runtime-bundle",
                            "example-cloud-connector"]
 
             for (module in modules) {
               sh "echo working on::: $module"
-//              dir("$module/charts/$module") {
-//                retry(5) {
-//                  sh "make tag"
-//                }
-//              }
-
               dir("$module") {
                 sh 'mvn clean deploy'
 
@@ -109,6 +118,66 @@ pipeline {
       }
     }
 
+    stage('Promote to Environments') {
+      when {
+        branch 'develop'
+      }
+      steps {
+        container('maven') {
+          script {
+
+
+            def modules = ["activiti-cloud-query/charts/activiti-cloud-query",
+                           "example-runtime-bundle/charts/runtime-bundle",
+                           "example-cloud-connector/charts/activiti-cloud-connector"]
+
+            for (module in modules) {
+              sh "echo working on::: $module"
+              dir("$module") {
+//                sh 'make release'
+                def name = module.substring(module.lastIndexOf('/') + 1)
+                sh "echo $name"
+                sh "rm -rf requirements.lock"
+                sh "rm -rf charts"
+                sh "rm -rf $name*.tgz"
+
+                sh "helm init --client-only"
+                sh "helm repo add charts_activiti https://activiti.github.io/activiti-cloud-charts/"
+                sh "helm repo add activiti-cloud-helm-charts https://activiti.github.io/activiti-cloud-helm-charts/"
+                sh "helm dependency build"
+                sh "helm lint"
+                sh "helm install . --name $name --debug --dry-run"
+
+                sh "helm package ."
+
+//                retry(5) {
+
+                def GITHUB_CHARTS_DIR = sh(script: "echo \$(basename $GITHUB_CHARTS_REPO)", returnStdout: true).trim()
+                sh """git clone -b "$GITHUB_CHARTS_BRANCH" "$GITHUB_CHARTS_REPO" $GITHUB_CHARTS_DIR """
+                def archive = name + "-" + VERSION + ".tgz"
+                sh """cp $archive $GITHUB_CHARTS_DIR """
+                sh """ cd $GITHUB_CHARTS_DIR && \
+                         helm repo index . && \
+                         git add . && \
+                         git status && \
+                         git commit -m "fix:(version) release $archive" && \
+                         git pull && \
+                         git push origin "$GITHUB_CHARTS_BRANCH" """
+                sh "rm -rf $GITHUB_CHARTS_DIR"
+
+
+//                }
+              }
+
+            }
+
+//            retry(5) {
+//              sh 'make updatebot/push-version'
+//            }
+          }
+        }
+      }
+    }
 
     stage('Build Release for acceptance test') {
       when {
@@ -129,9 +198,10 @@ pipeline {
     stage('Build And Deploy Helm Chart') {
       steps {
         container('maven') {
-
+//          sh "make updatebot/push-version-dry"
           sh "updatebot --dry push-version --kind helm activiti-cloud-dependencies $VERSION $ACTIVITI_CLOUD_FULL_CHART_VERSIONS"
           sh """echo "-------------------------------------" """
+//          sh "make prepare-helm-chart"
           sh """cd  .updatebot-repos/github/activiti/activiti-cloud-full-chart/charts/activiti-cloud-full-example/ && \\
                     rm -rf requirements.lock && \\
                     rm -rf charts && \\
@@ -144,6 +214,9 @@ pipeline {
                     helm lint && \\
                     helm package . """
           sh """echo "-------------------------------------" """
+//              sh "make replace-release-full-chart-names"
+//              sh """echo "-------------------------------------" """
+//          sh "make run-helm-chart"
           sh """ cd  .updatebot-repos/github/activiti/activiti-cloud-full-chart/charts/activiti-cloud-full-example/ && \\
             helm upgrade $PREVIEW_NAMESPACE . \\
             --install \\
@@ -162,7 +235,6 @@ pipeline {
           dir("activiti-cloud-acceptance-scenarios") {
 
             sh "mvn clean install -DskipTests"
-//            sh "make activiti-cloud-acceptance-scenarios"
           }
         }
       }
@@ -176,7 +248,6 @@ pipeline {
               dir("activiti-cloud-acceptance-scenarios") {
 
                 sh "mvn -pl 'modeling-acceptance-tests' clean verify"
-//                sh "make modeling-acceptance-tests"
               }
             }
           }
@@ -195,8 +266,6 @@ pipeline {
             container('maven') {
               dir("activiti-cloud-acceptance-scenarios") {
                 sh "mvn -pl 'runtime-acceptance-tests' clean verify"
-
-//                sh "make runtime-acceptance-tests"
               }
             }
           }
@@ -230,7 +299,9 @@ pipeline {
       steps {
         container('maven') {
           script {
-            def modules = ["example-runtime-bundle", "activiti-cloud-audit", "activiti-cloud-query", "activiti-cloud-notifications-graphql", "example-cloud-connector"]
+            def modules = ["example-runtime-bundle",
+                           "activiti-cloud-query",
+                           "example-cloud-connector"]
 
             for (module in modules) {
               dir("$module/charts/$module") {
